@@ -8,16 +8,11 @@ package org.jboss.logmanager.formatters;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Path;
 import java.security.Permission;
-import java.util.ArrayList;
-import java.util.List;
 import java.util.Set;
 import java.util.logging.Formatter;
 import java.util.logging.Level;
@@ -30,6 +25,7 @@ import org.junit.jupiter.api.Test;
 class Formatters$12Test {
 
     private static final String NULL_LOADER_ONLY_CLASS_NAME = ThreadDeath.class.getName();
+    private static final String RESOURCE_JAR_NAME = "security-manager-frame.jar";
 
     @Test
     void extendedExceptionFormattingUsesAllClassResolutionFallbacks() throws Exception {
@@ -97,143 +93,47 @@ class Formatters$12Test {
     @Test
     void extendedExceptionFormattingUsesPrivilegedClassLoaderResourceLookupWhenSecurityManagerIsInstalled()
             throws Exception {
-        final Path securityManagerJavaExecutable = findSecurityManagerCapableJavaExecutable();
-        Assumptions.assumeTrue(securityManagerJavaExecutable != null,
-                "No installed Java runtime with Security Manager support found");
+        Assumptions.assumeTrue(securityManagerCanBeInstalled(),
+                "Security Manager is not available for this test runtime");
 
-        final Process process = new ProcessBuilder(createSecurityManagerJavaCommand(securityManagerJavaExecutable))
-                .redirectErrorStream(true)
-                .start();
-        final String output;
-        try (InputStream processStream = process.getInputStream()) {
-            output = new String(processStream.readAllBytes(), StandardCharsets.UTF_8);
+        final Thread thread = Thread.currentThread();
+        final ClassLoader originalContextClassLoader = thread.getContextClassLoader();
+        final Throwable thrown = new IllegalStateException("boom");
+        final StackTraceElement[] stackTrace = {
+                new StackTraceElement(SecurityManagedFrame.class.getName(), "invoke", "SecurityManagedFrame.java", 41)
+        };
+        final ExtLogRecord record = new ExtLogRecord(Level.SEVERE, "message", Formatters$12Test.class.getName());
+        final PatternFormatter formatter = new PatternFormatter("%E");
+        final ClassLoader contextClassLoader = new ResourceReportingClassLoader(
+                SecurityManagedFrame.class.getName(),
+                readClassBytes(SecurityManagedFrame.class),
+                RESOURCE_JAR_NAME);
+
+        thrown.setStackTrace(stackTrace);
+        record.setThrown(thrown);
+
+        try {
+            System.setSecurityManager(new PermissiveSecurityManager());
+            thread.setContextClassLoader(contextClassLoader);
+
+            final String formatted = formatter.format(record);
+
+            assertThat(formatted)
+                    .contains(SecurityManagedFrame.class.getName())
+                    .contains(" [" + RESOURCE_JAR_NAME + ":");
+        } finally {
+            thread.setContextClassLoader(originalContextClassLoader);
+            System.setSecurityManager(null);
         }
+    }
 
-        final int exitCode = process.waitFor();
-
-        assertThat(exitCode).as(output).isZero();
-        assertThat(output).contains("SECURITY_MANAGER_RESOURCE_LOOKUP_OK");
+    private static boolean securityManagerCanBeInstalled() {
+        return Runtime.version().feature() < 24 && "allow".equals(System.getProperty("java.security.manager"));
     }
 
     private static Formatter createFormatter(final ClassLoader formatterClassLoader) throws Exception {
         final Class<?> formatterClass = formatterClassLoader.loadClass(PatternFormatter.class.getName());
         return (Formatter) formatterClass.getConstructor(String.class).newInstance("%E");
-    }
-
-    private static List<String> createSecurityManagerJavaCommand(final Path javaExecutable) throws Exception {
-        final List<String> command = new ArrayList<>();
-        command.add(javaExecutable.toString());
-        command.add("-Djava.security.manager=allow");
-        command.add("-cp");
-        command.add(String.join(File.pathSeparator,
-                codeSourceLocation(PatternFormatter.class),
-                codeSourceLocation(Formatters$12SecurityManagerMain.class)));
-        command.add(Formatters$12SecurityManagerMain.class.getName());
-        return command;
-    }
-
-    private static String codeSourceLocation(final Class<?> type) throws Exception {
-        return Path.of(type.getProtectionDomain().getCodeSource().getLocation().toURI()).toString();
-    }
-
-    private static String javaExecutableName() {
-        return System.getProperty("os.name").startsWith("Windows") ? "java.exe" : "java";
-    }
-
-    private static Path findSecurityManagerCapableJavaExecutable() throws Exception {
-        final List<Path> candidateExecutables = new ArrayList<>();
-        final int requiredFeatureVersion = requiredFeatureVersion(Formatters$12SecurityManagerMain.class);
-        addJavaExecutable(candidateExecutables, normalizedJavaHome(Path.of(System.getProperty("java.home"))));
-
-        final String javaHome = System.getenv("JAVA_HOME");
-        if (javaHome != null && !javaHome.isBlank()) {
-            addJavaExecutable(candidateExecutables, normalizedJavaHome(Path.of(javaHome)));
-        }
-
-        final Path currentJavaHome = normalizedJavaHome(Path.of(System.getProperty("java.home")));
-        final Path siblingParent = currentJavaHome.getParent();
-        if (siblingParent != null) {
-            final File[] siblingHomes = siblingParent.toFile().listFiles(File::isDirectory);
-            if (siblingHomes != null) {
-                for (File siblingHome : siblingHomes) {
-                    addJavaExecutable(candidateExecutables, siblingHome.toPath());
-                }
-            }
-        }
-
-        for (Path candidateExecutable : candidateExecutables) {
-            if (supportsSecurityManager(candidateExecutable, requiredFeatureVersion)) {
-                return candidateExecutable;
-            }
-        }
-        return null;
-    }
-
-    private static Path normalizedJavaHome(final Path javaHome) {
-        final Path fileName = javaHome.getFileName();
-        if (fileName != null && "jre".equals(fileName.toString())) {
-            return javaHome.getParent();
-        }
-        return javaHome;
-    }
-
-    private static void addJavaExecutable(final List<Path> candidateExecutables, final Path javaHome) {
-        if (javaHome == null) {
-            return;
-        }
-        final Path javaExecutable = javaHome.resolve("bin").resolve(javaExecutableName());
-        if (!candidateExecutables.contains(javaExecutable)) {
-            candidateExecutables.add(javaExecutable);
-        }
-    }
-
-    private static boolean supportsSecurityManager(final Path javaExecutable, final int requiredFeatureVersion)
-            throws Exception {
-        if (!javaExecutable.toFile().isFile()) {
-            return false;
-        }
-        if (javaFeatureVersion(javaExecutable) < requiredFeatureVersion) {
-            return false;
-        }
-
-        final Process process = new ProcessBuilder(javaExecutable.toString(), "-Djava.security.manager=allow", "-version")
-                .redirectErrorStream(true)
-                .start();
-        try (InputStream processStream = process.getInputStream()) {
-            processStream.readAllBytes();
-        }
-        return process.waitFor() == 0;
-    }
-
-    private static int requiredFeatureVersion(final Class<?> type) throws IOException {
-        final byte[] classBytes = readClassBytes(type);
-        final int majorVersion = ((classBytes[6] & 0xff) << 8) | (classBytes[7] & 0xff);
-        return majorVersion - 44;
-    }
-
-    private static int javaFeatureVersion(final Path javaExecutable) throws Exception {
-        final Process process = new ProcessBuilder(javaExecutable.toString(), "-XshowSettings:properties", "-version")
-                .redirectErrorStream(true)
-                .start();
-        final String output;
-        try (InputStream processStream = process.getInputStream()) {
-            output = new String(processStream.readAllBytes(), StandardCharsets.UTF_8);
-        }
-        if (process.waitFor() != 0) {
-            return -1;
-        }
-
-        final String marker = "java.class.version = ";
-        final int markerIndex = output.indexOf(marker);
-        if (markerIndex == -1) {
-            return -1;
-        }
-        final int versionStart = markerIndex + marker.length();
-        final int versionEnd = output.indexOf('.', versionStart);
-        if (versionEnd == -1) {
-            return -1;
-        }
-        return Integer.parseInt(output.substring(versionStart, versionEnd)) - 44;
     }
 
     private static byte[] readClassBytes(final Class<?> type) throws IOException {
@@ -287,6 +187,36 @@ class Formatters$12Test {
         }
     }
 
+    private static final class ResourceReportingClassLoader extends ClassLoader {
+        private final String className;
+        private final byte[] classBytes;
+        private final URL resourceUrl;
+
+        private ResourceReportingClassLoader(final String className, final byte[] classBytes, final String jarName)
+                throws Exception {
+            super(null);
+            this.className = className;
+            this.classBytes = classBytes;
+            this.resourceUrl = new URL("jar:file:/virtual/" + jarName + "!/" + className.replace('.', '/') + ".class");
+        }
+
+        @Override
+        protected Class<?> findClass(final String name) throws ClassNotFoundException {
+            if (className.equals(name)) {
+                return defineClass(name, classBytes, 0, classBytes.length);
+            }
+            throw new ClassNotFoundException(name);
+        }
+
+        @Override
+        public URL getResource(final String name) {
+            if ((className.replace('.', '/') + ".class").equals(name)) {
+                return resourceUrl;
+            }
+            return null;
+        }
+    }
+
     private static final class IsolatedFormatterClassLoader extends URLClassLoader {
         private static final String ISOLATED_PACKAGE_PREFIX = "org.jboss.logmanager.";
 
@@ -321,102 +251,6 @@ class Formatters$12Test {
             }
         }
     }
-}
-
-final class ContextLoadedFrame {
-    private ContextLoadedFrame() {
-    }
-}
-
-final class IsolatedLoaderVisibleFrame {
-    private IsolatedLoaderVisibleFrame() {
-    }
-}
-
-final class Formatters$12SecurityManagerMain {
-    private static final String RESOURCE_JAR_NAME = "security-manager-frame.jar";
-
-    private Formatters$12SecurityManagerMain() {
-    }
-
-    public static void main(final String[] args) throws Exception {
-        System.setSecurityManager(new PermissiveSecurityManager());
-
-        final Thread thread = Thread.currentThread();
-        final ClassLoader originalContextClassLoader = thread.getContextClassLoader();
-        final Throwable thrown = new IllegalStateException("boom");
-        final StackTraceElement[] stackTrace = {
-                new StackTraceElement(SecurityManagedFrame.class.getName(), "invoke", "SecurityManagedFrame.java", 41)
-        };
-        final ExtLogRecord record = new ExtLogRecord(Level.SEVERE, "message", Formatters$12SecurityManagerMain.class.getName());
-        final PatternFormatter formatter = new PatternFormatter("%E");
-        final ClassLoader contextClassLoader = new ResourceReportingClassLoader(
-                SecurityManagedFrame.class.getName(),
-                readClassBytes(SecurityManagedFrame.class),
-                RESOURCE_JAR_NAME);
-
-        thrown.setStackTrace(stackTrace);
-        record.setThrown(thrown);
-
-        try {
-            thread.setContextClassLoader(contextClassLoader);
-
-            final String formatted = formatter.format(record);
-
-            if (!formatted.contains(SecurityManagedFrame.class.getName())) {
-                throw new AssertionError("Missing stack frame in formatted output: " + formatted);
-            }
-            if (!formatted.contains(" [" + RESOURCE_JAR_NAME + ":")) {
-                throw new AssertionError("Missing resource-derived JAR tag in formatted output: " + formatted);
-            }
-            System.out.println("SECURITY_MANAGER_RESOURCE_LOOKUP_OK");
-        } finally {
-            thread.setContextClassLoader(originalContextClassLoader);
-            System.setSecurityManager(null);
-        }
-    }
-
-    private static byte[] readClassBytes(final Class<?> type) throws IOException {
-        final String resourceName = type.getName().replace('.', '/') + ".class";
-        final InputStream resourceStream = type.getClassLoader().getResourceAsStream(resourceName);
-
-        if (resourceStream == null) {
-            throw new IOException("Missing class resource: " + resourceName);
-        }
-        try (resourceStream) {
-            return resourceStream.readAllBytes();
-        }
-    }
-
-    private static final class ResourceReportingClassLoader extends ClassLoader {
-        private final String className;
-        private final byte[] classBytes;
-        private final URL resourceUrl;
-
-        private ResourceReportingClassLoader(final String className, final byte[] classBytes, final String jarName)
-                throws Exception {
-            super(null);
-            this.className = className;
-            this.classBytes = classBytes;
-            this.resourceUrl = new URL("jar:file:/virtual/" + jarName + "!/" + className.replace('.', '/') + ".class");
-        }
-
-        @Override
-        protected Class<?> findClass(final String name) throws ClassNotFoundException {
-            if (className.equals(name)) {
-                return defineClass(name, classBytes, 0, classBytes.length);
-            }
-            throw new ClassNotFoundException(name);
-        }
-
-        @Override
-        public URL getResource(final String name) {
-            if ((className.replace('.', '/') + ".class").equals(name)) {
-                return resourceUrl;
-            }
-            return null;
-        }
-    }
 
     private static final class PermissiveSecurityManager extends SecurityManager {
         @Override
@@ -426,6 +260,16 @@ final class Formatters$12SecurityManagerMain {
         @Override
         public void checkPermission(final Permission perm, final Object context) {
         }
+    }
+}
+
+final class ContextLoadedFrame {
+    private ContextLoadedFrame() {
+    }
+}
+
+final class IsolatedLoaderVisibleFrame {
+    private IsolatedLoaderVisibleFrame() {
     }
 }
 
